--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "bun run prisma:generate",
+    "db:migrate": "prisma migrate dev --name",
+    "db:apply": "prisma migrate deploy",
+    "db:reset": "prisma migrate reset --force",
+    "db:status": "prisma migrate status",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
