feat: added upload route

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "bun run prisma:generate",
+    "prisma:generate":"prisma generate",
+    "postinstall": "prisma generate",
     "db:migrate": "prisma migrate dev --name",
     "db:apply": "prisma migrate deploy",
     "db:reset": "prisma migrate reset --force",
