--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,6 +13,7 @@
         "@logto/rn": "^0.3.0",
         "@react-native-async-storage/async-storage": "^2.0.0",
         "@react-navigation/native": "^6.0.2",
+        "axios": "^1.7.7",
         "expo": "~51.0.28",
         "expo-constants": "~16.0.2",
         "expo-crypto": "^13.0.2",
@@ -32,7 +33,8 @@
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-web": "~0.19.10"
+        "react-native-web": "~0.19.10",
+        "swr": "^2.2.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
