--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
         "lint": "expo lint"
     },
     "dependencies": {
+        "@expo-google-fonts/outfit": "^0.2.3",
         "@expo/vector-icons": "^14.0.2",
         "@logto/rn": "^0.3.0",
         "@react-native-async-storage/async-storage": "1.23.1",
@@ -18,8 +19,10 @@
         "expo-constants": "~16.0.2",
         "expo-crypto": "^13.0.2",
         "expo-font": "~12.0.9",
+        "expo-google-fonts": "^0.0.0",
         "expo-image-picker": "^15.0.7",
         "expo-linking": "~6.3.1",
+        "expo-location": "~17.0.1",
         "expo-router": "~3.5.23",
         "expo-secure-store": "^13.0.2",
         "expo-splash-screen": "~0.27.5",
@@ -29,6 +32,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.5",
+        "react-native-document-picker": "^9.3.1",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.5",
