--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
