--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@logto/rn": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "expo": "~51.0.28",
