--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.1",
     "@nestjs/terminus": "^10.2.3",
     "@prisma/client": "5.19.1",
