--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@logto/rn": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.4",
     "axios": "^1.7.7",
@@ -40,9 +41,11 @@
     "react-native": "0.74.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.5"
   },
