--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "expo-server-sdk": "^3.11.0",
     "helmet": "^7.1.0",
     "ollama": "^0.5.9",
     "reflect-metadata": "^0.2.0",
