--- a/mobile/app.json
+++ b/mobile/app.json
@@ -21,7 +21,8 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
-      ]
+      ],
+      "package": "dev.jabed.kisanmitra"
     },
     "plugins": [
       "expo-router",
