--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
+    "expo-device": "~6.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
@@ -28,6 +29,7 @@
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.17",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
