--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@logto/rn": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -26,6 +27,7 @@
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-google-fonts": "^0.0.0",
+    "expo-image": "~1.12.15",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
@@ -38,6 +40,7 @@
     "expo-updates": "~0.25.24",
     "expo-web-browser": "^13.0.3",
     "lottie-react-native": "^7.0.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
