--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "expo-server-sdk": "^3.11.0",
     "helmet": "^7.1.0",
     "ollama": "^0.5.9",
+    "openmeteo": "^1.1.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8",
